--- a/projects/todo-web/tsconfig.json
+++ b/projects/todo-web/tsconfig.json
@@ -19,13 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "common/*": ["../common/*"]
+      "common/*": ["../../common/*"]
     }
   },
-  "include": [
-    "src",
-    "../common"
-  ],
+  "include": ["src"]
 }
